@@ -26,10 +26,9 @@
       <td id="m13">
         <table border="0" cellspacing="0" cellpadding="0" width="100%">
           <tr>
-            <td style="background-image:url(themes/fruity/images/middle_top2.gif);background-repeat:no-repeat;background-color:#FFA600" width="168">
-              <img src="themes/fruity/images/blind.gif" width="168" height="81" border="0" alt="" />
+            <td style="background-image:url(themes/fruity/images/middle_top2.gif);background-repeat:no-repeat;background-color:#FFA600;width:168px;height:81px;">
             </td>
-            <td style="background-color:#FFA600" align="left" valign="middle">
+            <td style="background-color:#FFA600;text-align:left;vertical-align:middle;">
               <h1>{GAL_NAME}</h1>
               <h3>{GAL_DESCRIPTION}</h3>
             </td>
@@ -39,35 +38,39 @@
     </tr>
     <tr>
       <td style="background-color:#FFFF00" id="m21">&nbsp;</td>
-      <td id="m22" style="background-image:url(themes/fruity/images/yellow_corner.gif);background-repeat:no-repeat" width="25">
-        <img src="themes/fruity/images/blind.gif" width="25" height="45" border="0" alt="" />
+      <td id="m22" style="background-image:url(themes/fruity/images/yellow_corner.gif);background-repeat:no-repeat;max-height:32px;width:25px;height:45px;">
       </td>
-      <td id="m23"  style="background-image:url(themes/fruity/images/grey_vertical.gif);background-repeat:repeat-x" align="center" valign="middle">
-        <br />
+      <td id="m23" style="background-image:url(themes/fruity/images/grey_vertical.gif);background-repeat:repeat-x;padding-top:10px;text-align:center;vertical-align:middle;">
         {ADMIN_MENU}
+      </td>
+    </tr>
+    <tr>
+      <td style="background-color:#FFFF00" id="m24">&nbsp;</td>
+      <td id="m25" style="background-image:url(themes/fruity/images/yellow_bar.gif);background-repeat:repeat-y;width:25px;">
+      </td>
+      <td id="m26" style="text-align:left;vertical-align:middle;">
         {MESSAGE_BLOCK}
       </td>
     </tr>
     <tr>
-      <td id="m31" valign="top" style="background-color:#6BBE10">
+      <td id="m31" style="background-color:#6BBE10;text-align:left;vertical-align:top;">
         <table border="0" cellspacing="0" cellpadding="0" width="100%">
           <tr>
             <td >
               <table border="0" cellspacing="0" cellpadding="0" width="100%">
                 <tr>
-                  <td style="background-color:#6BBE10;background-image:url(themes/fruity/images/main_under_left.gif);background-repeat:no-repeat" width="24">
+                  <td style="background-color:#6BBE10;background-image:url(themes/fruity/images/main_under_left.gif);background-repeat:no-repeat;width:24px;">
                   </td>
-                  <td style="background-color:#6BBE10;background-image:url(themes/fruity/images/main_under_middle.gif);background-repeat:repeat-x">
-                    <img src="themes/fruity/images/blind.gif" width="1" height="22" border="0" alt="" />&nbsp;
+                  <td style="background-color:#6BBE10;background-image:url(themes/fruity/images/main_under_middle.gif);background-repeat:repeat-x;height:22px;">
                   </td>
-                  <td style="background-color:#6BBE10;background-image:url(themes/fruity/images/main_under_right.gif);background-repeat:no-repeat" width="98">
+                  <td style="background-color:#6BBE10;background-image:url(themes/fruity/images/main_under_right.gif);background-repeat:no-repeat;width:98px;">
                   </td>
                 </tr>
               </table>
             </td>
           </tr>
           <tr>
-            <td style="background-color:#6BBE10" align="center" valign="top">
+            <td style="background-color:#6BBE10;text-align:center;vertical-align:top;padding-left:5px;padding-right:5px;">
               {SYS_MENU}<br />{SUB_MENU}
               <br />
               {SOCIAL_BOOKMARKS}
@@ -77,7 +80,7 @@
       </td>
       <td id="m32" style="background-image:url(themes/fruity/images/grey_horizontal.gif);background-repeat:repeat-y" >
       </td>
-      <td id="m33" valign="top">
+      <td id="m33" style="text-align:left;vertical-align:top">
         {GALLERY}
       </td>
     </tr>
@@ -86,8 +89,8 @@
         <table border="0" cellspacing="0" cellpadding="0" width="100%">
           <tr>
             <td style="background-color:#6BBE10">&nbsp;</td>
-            <td style="background-image:url(themes/fruity/images/lb_left.gif);background-repeat:no-repeat" width="126">
-              <img src="themes/fruity/images/blind.gif" width="1" height="55" border="0" alt="" />&nbsp;</td>
+            <td style="background-image:url(themes/fruity/images/lb_left.gif);background-repeat:no-repeat;min-width:126px;height:55px;">
+            </td>
           </tr>
         </table>
       </td>
@@ -102,8 +105,8 @@
           <tr>
             <td style="background-image:url(themes/fruity/images/left_bottom_left.gif);background-repeat:repeat-x">&nbsp;
             </td>
-            <td style="background-image:url(themes/fruity/images/lb_bottom.gif);background-repeat:no-repeat" width="126">
-              <img src="themes/fruity/images/blind.gif" width="1" height="6" border="0" alt="" />&nbsp;</td>
+            <td style="background-image:url(themes/fruity/images/lb_bottom.gif);background-repeat:no-repeat;width:126px;height:6px;">
+            </td>
           </tr>
         </table>
       </td>
