@@ -25,6 +25,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2009-05-22 [O] Made fruity theme more standards-compliant {GauGau}
 2009-05-22 [O] Moved draghandle class from individual to global stylesheet {GauGau}
 2009-05-19 [O] Added separate overall stylesheet that contains theme-independant styles {GauGau}
 2009-05-19 [C] Replaced cluetip plugin with greybox plugin {GauGau}
